add modularity, photo user, var color

--- a/src/styles/helpers/media.scss
+++ b/src/styles/helpers/media.scss
@@ -214,6 +214,12 @@
 		width: 64%;
 		margin-left: 2%;
 	}
+	.list__checkbox{
+		margin-bottom: 50px;
+		&__item{
+			margin-bottom: 50px;
+		}
+	}
 
 }
 @media screen and (max-width : 320px){
