--- a/src/styles/helpers/variables.scss
+++ b/src/styles/helpers/variables.scss
@@ -2,6 +2,11 @@ $pxval:14px;
 $base:16px;
 $lhheader:60px;
 $lhfooter:80px;
+$blue:#37b7ec;
+$grey:#3C434A;
+$mark_checklist:#EF4B2B;
+$mark_protected:#3C434A;
+$mark_archived:#979DA3;
 
 $em-base: 16px !default;
 
