--- a/src/styles/sections/header.scss
+++ b/src/styles/sections/header.scss
@@ -1,63 +1,63 @@
 .header{
-    @include clearfix;
-    height: $lhheader;
-    background-color: #3C434A;
-    position: relative;
+	@include clearfix;
+	height: $lhheader;
+	background-color: $grey;
+	position: relative;
 }
 .logo{
-    position: relative;
-    float: left;
-    margin-right: 160px;
-    &__link{
-        position: relative;
-        display: block;
-        &__img{
-            width: 137px;
-            height: 36px;
-            margin: 9px 0 15px 0;
-        }
-    }
+	position: relative;
+	float: left;
+	margin-right: 160px;
+	&__link{
+		position: relative;
+		display: block;
+		&__img{
+			width: 137px;
+			height: 36px;
+			margin: 9px 0 15px 0;
+		}
+	}
 }
 
 .subscribe, .subscribe__media{
-    position: relative;
-    float: left;
-    text-transform: uppercase;
-    color:#A3ADB3;
-    line-height: $lhheader;
-    font-size: 13px;
-    &__link{
-        color:#37b7ec;
-        text-decoration: none;
-        border-bottom: 1px solid #37b7ec;
-        font-weight: 600;
-        &:hover{
-            text-decoration: none;
-            border-bottom: none;
-        }
-    }
+	position: relative;
+	float: left;
+	text-transform: uppercase;
+	color:#A3ADB3;
+	line-height: $lhheader;
+	font-size: 13px;
+	&__link{
+		color:$blue;
+		text-decoration: none;
+		border-bottom: 1px solid $blue;
+		font-weight: 600;
+		&:hover{
+			text-decoration: none;
+			border-bottom: none;
+		}
+	}
 }
 
 .subscribe__media{
-    display: none;
-    .subscribe__link{
-        text-decoration: none;
-        border: none;
+	display: none;
+	.subscribe__link{
+		text-decoration: none;
+		border: none;
 
-    }
+	}
 }
 
 .login{
-    position: relative;
-    float: right;
-    line-height: $lhheader;
-    &__link{
-        color: #fff;
-        font-size: 13px;
-        text-transform: uppercase;
-        text-decoration: none;
-        &:hover{
-            color:#37b7ec;
-        }
-    }
+	position: relative;
+	float: right;
+	line-height: $lhheader;
+	&__link{
+		color: #fff;
+		font-size: 13px;
+		text-transform: uppercase;
+		text-decoration: none;
+		&:hover{
+			color:$blue;
+		}
+	}
 }
