--- a/src/styles/helpers/adjustment.scss
+++ b/src/styles/helpers/adjustment.scss
@@ -1,7 +1,7 @@
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+	margin: 0;
+	padding: 0;
+	box-sizing: border-box;
 }
 
 .layout-center-wrapper{
@@ -44,6 +44,21 @@ body{
 	@include clearfix;
 }
 
+.main{
+	position: relative;
+	margin: 30px 0 170px;
+	@include clearfix;
+}
+
+.post{
+	min-height: 78px;
+	background-color: #fff;
+	border-radius: 5px;
+	padding: 30px;
+	margin-bottom: 12px;
+	position: relative;
+}
+
 ul{
 	li{
 		list-style: none;
@@ -51,20 +66,20 @@ ul{
 }
 
 input[type="checkbox"], input[type="radio"] {
-    opacity: 0;
-    outline: none;
-    -ms-touch-action: none;
-    touch-action: none;
+	opacity: 0;
+	outline: none;
+	-ms-touch-action: none;
+	touch-action: none;
 }
 
 input[type="checkbox"], input[type="radio"] {
-    -webkit-box-sizing: border-box;
-    -moz-box-sizing: border-box;
-    box-sizing: border-box;
-    padding: 0;
+	-webkit-box-sizing: border-box;
+	-moz-box-sizing: border-box;
+	box-sizing: border-box;
+	padding: 0;
 }
 
 img {
-    max-width: 100%;
-    height: auto;
+	max-width: 100%;
+	height: auto;
 }
